--- a/Webcam Application/src/webcam/application/FXMLDocument.fxml
+++ b/Webcam Application/src/webcam/application/FXMLDocument.fxml
@@ -5,31 +5,48 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 <BorderPane xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="webcam.application.FXMLDocumentController">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
+      <VBox BorderPane.alignment="CENTER">
+         <children>
+            <MenuBar>
+              <menus>
+                <Menu mnemonicParsing="false" text="File">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Close" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Delete" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="About" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+            <ToolBar prefHeight="40.0" prefWidth="200.0">
+               <items>
+                  <Label text="Blur Size" />
+                  <TextField fx:id="blurField" onAction="#handleBlurSizeChangeAction" text="3" />
+                  <Label text="Low Threshold" />
+                  <TextField fx:id="tlField" onAction="#handleTLChangeAction" text="10" />
+                  <Label layoutX="246.0" layoutY="16.0" text="High Threshold" />
+                  <TextField fx:id="thField" layoutX="345.0" layoutY="11.0" onAction="#handleTHChangeAction" text="30" />
+               </items>
+            </ToolBar>
+         </children>
+      </VBox>
    </top>
    <bottom>
       <Label fx:id="statusLabel" maxWidth="1.7976931348623157E308" text="Status" BorderPane.alignment="CENTER">
